--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,17 +6,21 @@ description: A Minecraft plugin for rules, etc
 commands:
   edocs:
     description: Documentation
-    usage: /edocs rules | help
+    usage: /edocs rules | reload | help
     permission-message: You don't have <permission>
 permissions:
   edocs.*:
     description: Gives access to all eithondocs commands
     default: op
-    jumppad.rules: true
-    jumppad.help: true
-  edocs.add:
+    edocs.rules: true
+    edocs.reload: true
+    edocs.help: true
+  edocs.rules:
     description: Access to /edocs rules command
     default: op
+  edocs.reload:
+    description: Access to /edocs reload command
+    default: op
   edocs.help:
-    description: Access to /edocs helpcommand
+    description: Access to /edocs help command
     default: op
