--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: EithonDocs
 main: se.fredsfursten.eithondocs.EithonDocsPlugin
-version: 1.0-dev
+version: 1.1
 author: vanbrayne
 description: A Minecraft plugin for rules, etc
 commands:
