--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>se.fredsfursten</groupId>
-  <version>1.3</version>
+  <version>2.0</version>
   <name>EithonDocs</name>
   <build>
       <plugins>
@@ -30,6 +30,13 @@
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
+       <dependency>
+            <groupId>se.fredsfursten.eithonlibraryplugin</groupId>
+            <artifactId>EithonLibraryPlugin</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>C:\Users\Lars\workspace\EithonLibraryPlugin.jar</systemPath>
+        </dependency>
    </dependencies>
    <artifactId>EithonDocs</artifactId>
 </project>
