--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,2 +1,9 @@
-DoDebugPrint: 1
+#
+# PageOfMessage has 2 parameters: <current page> (%d), <total pages> (%d)
+PageOfMessage: Page %d of %d
+#
+#
+DoDebugPrint: 0
+#
+#
 ChatBoxWidth: 320
