--- a/pom.xml
+++ b/pom.xml
@@ -1,42 +1,42 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>se.fredsfursten</groupId>
-  <version>2.1</version>
-  <name>EithonDocs</name>
-  <build>
-      <plugins>
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <version>2.5.1</version>
-              <configuration>
-                  <source>1.8</source>
-                  <target>1.8</target>
-              </configuration>
-          </plugin>
-      </plugins>
-   </build>
-   <repositories>
-       <repository>
-           <id>bukkit-repo</id>
-           <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
-       </repository>
-   </repositories>
-   <dependencies>
-       <dependency>
-           <groupId>org.bukkit</groupId>
-           <artifactId>bukkit</artifactId>
-           <version>1.8-R0.1-SNAPSHOT</version>
-           <type>jar</type>
-           <scope>provided</scope>
-       </dependency>
-       <dependency>
-            <groupId>se.fredsfursten.eithonlibraryplugin</groupId>
-            <artifactId>EithonLibraryPlugin</artifactId>
-            <version>1.1</version>
-            <scope>system</scope>
-            <systemPath>C:\Users\Lars\workspace\EithonLibraryPlugin.jar</systemPath>
-        </dependency>
-   </dependencies>
-   <artifactId>EithonDocs</artifactId>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>net.eithon.plugin</groupId>
+	<version>1.0</version>
+	<artifactId>EithonDocs</artifactId>
+	<name>EithonDocs</name>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<repositories>
+		<repository>
+			<id>bukkit-repo</id>
+			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
+		</repository>
+	</repositories>
+	<dependencies>
+		<dependency>
+			<groupId>org.bukkit</groupId>
+			<artifactId>bukkit</artifactId>
+			<version>1.8-R0.1-SNAPSHOT</version>
+			<type>jar</type>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.eithon.plugin</groupId>
+			<artifactId>EithonLibrary</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>D:\workspace\EithonLibrary.jar</systemPath>
+		</dependency>
+	</dependencies>
 </project>
