--- a/.project
+++ b/.project
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JumpPadPlugin</name>
-	<comment></comment>
+	<name>EithonDocs</name>
+	<comment/>
 	<projects>
-		<project>PluginTools</project>
+		<project>EithonDocs</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
