--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,8 @@
 		<dependency>
 			<groupId>net.eithon.plugin</groupId>
 			<artifactId>EithonLibrary</artifactId>
-			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>D:\workspace\EithonLibrary.jar</systemPath>
+			<version>[1.0,)</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
