--- a/.classpath
+++ b/.classpath
@@ -28,5 +28,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/EithonLibrary"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
