--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,7 +7,7 @@ depend: [EithonLibrary]
 commands:
   edocs:
     description: Documentation
-    usage: /edocs reload | <file name>
+    usage: /edocs reload | next | <file name>
     permission-message: You don't have <permission>
 permissions:
   edocs.*:
@@ -15,8 +15,12 @@ permissions:
     default: op
     edocs.read: true
     edocs.reload: true
-  edocs.rules:
-    description: Access to /edocs rules command
+    edocs.next: true
+  edocs.reload:
+    description: Access to /edocs reload command
+    default: op
+  edocs.next:
+    description: Access to /edocs next command
     default: op
   edocs.read:
     description: Can read documents
