--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,17 @@
+## Configuration for EithonLibrary
+eithon:
+  UseMarkUpForMessages: 1
+  UseWrappingForMessages: 1
+  
+  #
+  # Debug level
+  #	0 = NONE (no debug messages)
+  #	1 = MAJOR (only major messages)
+  #	2 = MINOR (also minor messages)
+  #	3 = VERBOSE (all messages)
+  #
+  DebugLevel: 1
+
 #
 # Debug level
 #	0 = NONE (no debug messages)
