--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -36,5 +36,5 @@ messages:
   # Example: The document "help.txt" will have %TITLE% = "Help"
   # %CURRENT_PAGE%: The current page. 1 for the first page, 2 for the second, etc.
   # %TOTAL_PAGES%: The total number of pages, i.e. when we are at the last page, the %CURRENT_PAGE% will be the same as %TOTAL_PAGES%
-  PageHeader: -----[%TITLE%]-----
+  PageHeader: "\t[hl=1][%TITLE%]"
   PageFooter: Page %CURRENT_PAGE% of %TOTAL_PAGES%
