--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: EithonDocs
 main: net.eithon.plugin.docs.Plugin
-version: 2.4
+version: "${project.version}"
 author: vanbrayne
 description: A Minecraft plugin for rules, etc
 depend: [EithonLibrary]
